src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_three_class_chain.snap
---
source: src/mermaid/ascii/class/render.rs
expression: "render_s(\"classDiagram\\nclass A\\nclass B\\nclass C\\nA --> B\\nB --> C\")"
---



      ┌───┐      ┌───┐
      │ A │─────◁│ B │
      └───┘      └───┘
                   │
        ┌──────────┘
        △
      ┌───┐
      │ C │
      └───┘
