src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_two_classes_aggregation.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 543
expression: "render_s(\"classDiagram\\nclass Team\\nclass Player\\nTeam o-- Player\")"
---



      ┌──────┐        ┌────────┐
      │ Team │◇───────│ Player │
      └──────┘        └────────┘
