src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_two_classes_association_with_label.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 550
expression: "render_s(\"classDiagram\\nclass A\\nclass B\\nA --> B : uses\")"
---



      ┌───┐uses  ┌───┐
      │ A │─────◁│ B │
      └───┘      └───┘
