src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_two_classes_composition.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 536
expression: "render_s(\"classDiagram\\nclass Car\\nclass Engine\\nCar *-- Engine\")"
---



      ┌─────┐         ┌────────┐
      │ Car │◆────────│ Engine │
      └─────┘         └────────┘
