src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_two_classes_inheritance.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 529
expression: "render_s(\"classDiagram\\nclass Animal\\nclass Dog\\nAnimal <|-- Dog\")"
---



      ┌────────┐      ┌─────┐
      │ Animal │◁─────│ Dog │
      └────────┘      └─────┘
