src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_two_classes_with_cardinality.snap
---
source: src/mermaid/ascii/class/render.rs
expression: "render_s(\"classDiagram\\nclass A\\nclass B\\nA \\\"1\\\" --> \\\"*\\\" B : has\")"
---


       "1"        "*"
      ┌───┐ has  ┌───┐
      │ A │─────◁│ B │
      └───┘      └───┘
